fixed off-centered button

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,7 +7,7 @@
   height: 200px;
   padding: 20px;
   color: white;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .navbar-header a {
