--- a/src/components/SelectedItem/SelectedItem.css
+++ b/src/components/SelectedItem/SelectedItem.css
@@ -11,7 +11,9 @@ p {
   font-size: 1rem;
 }
 
-img {
-  margin-left: auto;
-  margin-right: auto;
+.btn-outline-primary {
+  margin-top: 15px;
+  height: 30px;
+  padding-top: 5px;
+  color: #877c47;
 }
